# termchan

./: .editorconfig  .env  .gitignore  Cargo.toml  MEMO.md  Makefile  Makefile.toml  menu_sjis.html  readme.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ossar.yml  release.yml
_src/: lib.rs  sender.rs
_src/configs/: bbsmenu.rs  board.rs  config.rs  cookie.rs  login.rs  proxy.rs
_src/controller/: board.rs  menu.rs  reply.rs
cli/: Cargo.toml  memo.md
cli/src/: lib.rs  main.rs  renderer.rs  state.rs  ui.rs
cli/src/ui/: bbsmenu_view.rs  board_view.rs  settings_view.rs
cli/src/widgets/: atomic_stateful_list.rs  input.rs  message_box.rs  popup.rs  popup_input.rs  reply_form.rs  stateful_list.rs
client/: Cargo.toml  shortcut.md
client/src/: application.rs  config.rs  event.rs  main.rs  renderer.rs  state.rs  style.rs  ui.rs  ui_back.rs
client/src/database/: connect.rs
client/src/state/: bbsmenu.rs  board.rs  bookmark.rs  categories.rs  category.rs  home.rs  layout.rs  post.rs  tab.rs  thread.rs
client/src/ui/: layout.rs  mylist.rs  popup.rs  stateful_list.rs  stateful_mutex_list.rs
core/: Cargo.toml
core/src/: login.rs  receiver.rs  sender.rs
core/src/configs/: cookie.rs
core/src/controller/: bbsmenu.rs
entity/: Cargo.toml
entity/src/: board.rs  board_bookmark.rs  category.rs  image.rs  lib.rs  menu.rs  prelude.rs  thread.rs  thread_post.rs  thread_post_image.rs
migration/: Cargo.toml
migration/src/: create_table.rs  lib.rs  m20220101_000001_create_table.rs  main.rs  table.rs
post/: Cargo.toml
post/src/: lib.rs  main.rs
post/src/access/get/: bbsmenu.rs  board.rs  board_cert.rs
post/src/access/post/: reply.rs  thread.rs
post/src/form/: data.rs  encode.rs  reply.rs  thread.rs
post/src/get/: bbsmenu.rs  board.rs  thread.rs
post/src/header/: build.rs
post/src/post/: reply.rs  thread.rs
post/src/post/form/: reply.rs  thread.rs
post/src/url/: reply.rs  thread.rs
post/src/util/: encoding.rs
src/: cookie.rs  encoder.rs  error.rs  lib.rs  login.rs  main.rs  page.rs  patterns.rs  pattterns.rs  post_reply.rs  post_thread.rs  receiver.rs  reqch.rs  sender.rs  thread.rs  util.rs
src/config/: config.rs  default.ini
src/configs/: bbsmenu.rs  config.rs  cookie.rs  default.yaml  post.rs  proxy.rs
src/controller/: bbsmenu.rs  board.rs  board_settings.rs  menu.rs  reply.rs  thread.rs
src/get/: bbsmenu.rs  board.rs  message.rs  mod.rs  name.rs  thread.rs
src/header/: build.rs  cookie.rs  mod.rs
src/models/: board.rs  reply.rs  thread.rs
src/post/: reply.rs  thread.rs
src/post/form/: mod.rs
src/services/: board.rs  board_settings.rs  menu.rs  thread.rs
src/url/: thread.rs  url.rs
src/util/: mod.rs  time.rs
src/utils/: encoder.rs  headers.rs  parser.rs  receiver.rs  requester.rs  sender.rs
termchan-core/: Cargo.toml
termchan-core/src/get/: bbsmenu.rs  board.rs  board_cert.rs  message.rs  thread.rs
termchan-core/src/header/: build.rs
termchan-core/src/post/: login.rs  mod.rs  reply.rs  reply_with_login.rs  thread.rs
termchan-core/src/post/form/: login.rs  mod.rs  reply.rs  thread.rs
termchan-core/src/url/: mod.rs  reply.rs  thread.rs  url.rs
termchan-core/src/util/: error.rs  time.rs
termchan-tui/: Cargo.toml  shortcut.md
termchan-tui/src/: application.rs  config.rs  event.rs  lib.rs  renderer.rs  run.rs  state.rs  ui.rs  words.rs
termchan-tui/src/config/: cache.rs  config.rs  credentials.rs  dirs.rs  mod.rs  theme.rs
termchan-tui/src/database/: connect.rs  logger.rs  mod.rs
termchan-tui/src/state/: bbsmenu.rs  board.rs  bookmark.rs  categories.rs  home.rs  layout.rs  post.rs  tab.rs  thread.rs
termchan-tui/src/ui/: layout.rs  mylist.rs  popup.rs  stateful_list.rs
tests/: cookie_test.rs  encode_test.rs  sjis_test1.txt
widget/: Cargo.toml
widget/src/: main.rs  stateful_bbsmenu_tree.rs
