[package]
name = "termchan"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["client", " widget"]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
chrono = "0.4.19"
chrono-tz = "0.6.1"
dirs = "4.0.0"
encoding_rs = "0.8.30"
futures = "0.3.21"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["gzip", "cookies"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
yaml-rust = "0.4.5"
html_parser = "0.6.3"
scraper = "0.13.0"
once_cell = "1.13.0"
eyre = "0.6.8"
thiserror = "1.0.31"
