[package]
name = "termchan"
version = "0.2.0"
edition = "2021"
authors = ["Haryoiro"]
description = "ターミナルで動く軽量2chクライアント"
license = "Apache-2.0"

[workspace]
members = [".", "client", "migration", "entity"]

[dependencies]
unicode-segmentation = "1.9.0"
anyhow = "1.0.56"
chrono = "0.4.19"
chrono-tz = "0.6.1"
dirs = "4.0.0"
encoding_rs = "0.8.30"
futures = "0.3.21"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["gzip", "cookies", "json"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
yaml-rust = "0.4.5"
html_parser = "0.6.3"
scraper = "0.13.0"
once_cell = "1.13.0"
eyre = "0.6.8"
thiserror = "1.0.31"
dotenv = "0.15.0"
rayon = "1.5.3"

[dependencies.sea-orm]
version = "0.9.1"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
default-features = false


[target.x86_64-apple-darwin]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
