[package]
name = "termchan"
version = "0.0.3"
edition = "2021"
authors = ["Haryoiro"]
license = "Apache-2.0"

[dependencies]
termchan-core = {path ="./termchan-core"}
termchan-tui = {path ="./termchan-tui"}
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "termchan"
path = "./termchan-tui/src/bin/termchan.rs"

[workspace]
members = ["termchan-core", "termchan-tui", "entity", "migration"]
