[package]
name = "cli"
version = "0.1.0"
edition = "2021"


[dependencies]
crossterm = { version = "0.23.2", features = ["serde"] }
tui = { version = "0.17.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.79"
termchan = { path = ".." }
anyhow = "1.0.56"
tokio = "1.17.0"
unicode-width = "0.1.9"
futures = "0.3.21"
pprof = { version = "0.7", features = ["flamegraph"] }
