[package]
name = "client"
version = "0.1.0"
edition = "2021"


[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
eyre = "0.6.8"
crossterm = { version = "0.24.0", features = ["serde"] }
once_cell = "1.13.0"
tui = { version = "0.18.0", features = ["serde", "termion"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
alt_serde_derive = "1.0.119"
termchan = { path = ".." }
anyhow = "1.0.56"
tokio = "1.17.0"
clap = { version = "3.2.8" }
tui-tree-widget = "0.9.0"
futures = "0.3.21"
termion-input-tokio = "0.3.0"
termion = "1.5.6"
chrono = "0.4.17"
chrono-tz = "0.6.1"
