[package]
name = "post"
version = "0.1.0"
edition = "2021"


[dependencies]
termchan = { path = ".." }
anyhow = "1.0.56"
reqwest = { version = "0.11.10", features = ["gzip", "cookies"] }
regex = "1.5.5"
encoding_rs = "0.8.30"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
